--- a/inbox/package.json
+++ b/inbox/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "ganache-cli": "^6.12.2",
     "mocha": "^8.4.0",
     "solc": "^0.4.17",
+    "truffle-hdwallet-provider": "0.0.3",
     "web3": "^1.0.0-beta.26"
   }
 }
