--- a/campaign/package.json
+++ b/campaign/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha Test/*"
   },
   "author": "",
   "license": "ISC",
