--- a/.gitignore
+++ b/.gitignore
@@ -54,8 +54,8 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
-.env
+# dotenv environment variables files
+*.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
