--- a/campaign/package.json
+++ b/campaign/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "fs-extra": "^10.0.0",
     "ganache-cli": "^6.12.2",
     "mocha": "^9.0.0",
     "solc": "^0.4.17",
-    "web3": "^1.0.0-beta.26"
+    "truffle-hdwallet-provider": "0.0.3",
+    "web3": "^1.3.5"
   }
 }
